--- a/index.html
+++ b/index.html
@@ -9,114 +9,107 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f7f7f7;
             color: #333;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 1em;
+            background-color: #003366;
+            color: #fff;
+            padding: 20px;
             text-align: center;
         }
-        .hero {
-            background: #4CAF50;
-            color: white;
-            padding: 4em 0;
+        nav {
+            background-color: #004080;
+            padding: 10px;
             text-align: center;
         }
-        main {
-            padding: 2em;
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
         }
-        .section {
-            margin-bottom: 2em;
+        .container {
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #003366;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px auto;
+        }
+        .contact-info {
+            margin-top: 20px;
         }
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #003366;
+            color: #fff;
             text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .cta {
-            text-align: center;
-            margin-top: 2em;
-        }
-        .cta button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        .cta button:hover {
-            background-color: #45a049;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            max-width: 500px;
-            margin: 0 auto;
-        }
-        form input, form textarea {
-            margin-bottom: 10px;
             padding: 10px;
-            border: 1px solid #ddd;
-        }
-        form button {
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        form button:hover {
-            background-color: #45a049;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+    <!-- Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v20.0" nonce="5aEOngvN"></script>
+
     <header>
         <h1>Scuola di Teatro Corpus Domini</h1>
+        <p>Un luogo dove scoprire e coltivare il talento teatrale</p>
     </header>
-    <section class="hero">
-        <h2>Benvenuti alla Scuola di Teatro Corpus Domini</h2>
-        <p>Scopri la magia del teatro con i nostri corsi professionali.</p>
-    </section>
-    <main>
-        <section class="section">
-            <h2>Inizio Corsi</h2>
-            <p>I nostri prossimi corsi iniziano il <strong>14 ottobre 2024</strong>. Non perdere l'opportunità di unirti a noi!</p>
+
+    <nav>
+        <a href="#about">Chi Siamo</a>
+        <a href="#courses">Corsi</a>
+        <a href="#contact">Contatti</a>
+    </nav>
+
+    <div class="container">
+        <section id="about">
+            <h2>Chi Siamo</h2>
+            <img src="immagine.jpg" alt="Scena teatrale - Chi Siamo">
+            <p>La Scuola di Teatro Corpus Domini, con sede a Bologna, offre corsi di recitazione per tutti i livelli, mirati a sviluppare le capacità artistiche e creative dei partecipanti. Il nostro obiettivo è creare un ambiente accogliente e stimolante dove ogni studente può esprimersi liberamente e crescere artisticamente.</p>
         </section>
-        <section class="section">
-            <h2>Corsi Offerti</h2>
-            <p>Offriamo corsi per tutti i livelli: principiante, intermedio e avanzato. I corsi si svolgono in modalità presenziale.</p>
-            <p><strong>Formula Pay As You Go:</strong> Paga solo per le lezioni che frequenti. Per maggiori informazioni sui costi, contattaci.</p>
+
+        <section id="courses">
+            <h2>I Nostri Corsi</h2>
+            <img src="immagine2.jpg" alt="Scena teatrale - I Nostri Corsi">
+            <p>Il programma dei corsi è suddiviso in trimestri e prevede un percorso formativo che abbraccia tutte le tecniche fondamentali della recitazione, dalla voce al movimento scenico, fino alla preparazione di performance teatrali.</p>
+            <ul>
+                <li>Primo Trimestre: Introduzione e Base</li>
+                <li>Secondo Trimestre: Tecniche Avanzate</li>
+                <li>Terzo Trimestre: Approfondimento e Interazione</li>
+                <li>Quarto Trimestre: Realizzazione e Performance</li>
+            </ul>
         </section>
-        <section class="section">
-            <h2>Sede</h2>
-            <p>Via Pomponazzi, accanto al Centro Commerciale Fossolo 2, presso la Chiesa del Corpus Domini, Bologna</p>
-            <p>Orari di apertura: dalle 18:00 alle 20:00</p>
-        </section>
-        <section class="section">
+
+        <section id="contact">
             <h2>Contattaci</h2>
-            <form action="mailto:info@scuoladiteatrocorpusdomini.it" method="post" enctype="text/plain">
-                <input type="text" name="name" placeholder="Nome" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <textarea name="message" rows="4" placeholder="Messaggio" required></textarea>
-                <button type="submit">Invia</button>
-            </form>
-            <p>Telefono: +39 051 637 9789</p> <!-- Numero ricavato per la Chiesa del Corpus Domini -->
-            <p>Email: <a href="mailto:info@scuoladiteatrocorpusdomini.it">info@scuoladiteatrocorpusdomini.it</a></p>
+            <img src="immagine3.jpg" alt="Scena teatrale - Contattaci">
+            <p class="contact-info">
+                <strong>Indirizzo:</strong> Via Enriques 56, Bologna, presso la Chiesa del Corpus Domini<br>
+                <strong>Telefono:</strong> 051 540017<br>
+                <strong>Email:</strong> <a href="mailto:parrocchiacorpusdominibo@gmail.com">parrocchiacorpusdominibo@gmail.com</a>
+            </p>
         </section>
-        <section class="cta">
-            <button onclick="window.location.href='mailto:info@scuoladiteatrocorpusdomini.it'">Iscriviti ora</button>
-        </section>
-    </main>
+    </div>
+
+    <!-- Pulsante Mi Piace di Facebook -->
+    <div class="fb-like" 
+         data-href="https://www.facebook.com/tuapagina" 
+         data-width="" 
+         data-layout="standard" 
+         data-action="like" 
+         data-size="small" 
+         data-share="true">
+    </div>
+
     <footer>
-        <p>&copy; 2024 Scuola di Teatro Corpus Domini</p>
-        <p><a href="https://www.facebook.com/ChiesaCorpusDominiBologna" target="_blank" style="color: white;">Segui la Chiesa del Corpus Domini su Facebook</a></p>
+        <p>&copy; 2024 Scuola di Teatro Corpus Domini. Tutti i diritti riservati.</p>
     </footer>
 </body>
 </html>
